--- a/frontend/src/pages/archive.module.css
+++ b/frontend/src/pages/archive.module.css
@@ -11,6 +11,8 @@
     color: #292620; 
 }
 
+
+
 a:visited {
     color: inherit;
     text-decoration: none;
@@ -22,7 +24,7 @@ a:visited {
     width: 689px;
     height: 154px;
     margin-left: 366px;
-    /*top: 358px;  */
+    margin-top: 58px;  
     
     background: #FBFBFB;
     box-shadow: 4px 4px 4px rgba(41, 38, 32, 0.04);
@@ -30,6 +32,10 @@ a:visited {
     /* margin-bottom: 300px; */
 
 }
+
+/* .card:first-child{
+    margin-top: 200px; 
+} */
 
 .text   {
     position: absolute;
