updating custom.css for navbar on archives

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -50,12 +50,13 @@
   
   font-style: normal;
 }
-.navbar.title{
+/* need to be updated */
+/* .navbar.title{
   font-size: 36px;
   line-height: 42px;  
   color: rgb(236, 223, 36);
 
-}
+} */
 
 
 /* .header_wrapper{
