difficulty filter, archive route, minor design imp

--- a/frontend/src/components/card.module.css
+++ b/frontend/src/components/card.module.css
@@ -1,29 +1,17 @@
-.archive {
+
+.tips {
     margin-bottom: 40px;
 }  
 
-.heading    {
+
+
+.heading   {
     font-style: normal;
     font-weight: 500;
     font-size: 32px;
     line-height: 38px;
     color: #292620; 
 }
-
-.tipsheader {
-    font-weight: 500; 
-    font-size: 48px;
-    line-height: 56px;
-    padding-top: 180px;
-    padding-left: 350px;
-    color: #292620;;
-}
-
-a:visited {
-    color: inherit;
-    text-decoration: none;
-}
-
 
 .card {
     position: center;
@@ -32,23 +20,27 @@ a:visited {
     margin-left: 366px;
     margin-top: 58px;  
     
-    background: #FBFBFB;
+    background: #F0F0EF;
     box-shadow: 4px 4px 4px rgba(41, 38, 32, 0.04);
     border-radius: 15px;
     /* margin-bottom: 300px; */
 
 }
 
+a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
+
+
 .text   {
     position: absolute;
     width: 654px;
     height: 38px;
-    
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
-
     color: #5E5D5B;
 }
-
