--- a/frontend/src/pages/dropdown.module.css
+++ b/frontend/src/pages/dropdown.module.css
@@ -25,8 +25,27 @@
     
     width: 133px;
     height: 33px;
-    left: 750px;
+    left: 600px;
     top: 17px;
+    z-index: 1;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+/* identical to box height */
+
+    color: #756C5B;
+
+} 
+
+.dropdownCat  {
+    position: relative;
+    display: inline-block;
+    bottom: 15px;
+    width: 133px;
+    height: 33px;
+    left: 750px;
+ 
     z-index: 1;
 
     font-weight: 700;
@@ -60,6 +79,10 @@
 
 }
 
+.dropdownCat:hover .menu {
+    display:block;
+
+}
 .menu   {
 display: none;
 }
