--- a/frontend/src/pages/dropdown.module.css
+++ b/frontend/src/pages/dropdown.module.css
@@ -14,8 +14,7 @@
     line-height: 19px;
 /* identical to box height */
 
-    color: #756C5B;
-
+  
 } 
 
 
@@ -52,7 +51,7 @@
     font-size: 16px;
     line-height: 19px;
 /* identical to box height */
-
+    border-radius: 8px; 
     color: #756C5B;
 
 } 
@@ -88,7 +87,7 @@ display: none;
 }
 
 .drop {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 
 /* Auto layout */
     display: flex;
@@ -98,16 +97,29 @@ display: none;
     padding: 7px 10px;
     gap: 10px;
 
-    /* position: absolute; */
+    /* position: absolute;*/
+
     width: 133px;
     height: 33px; 
 
-
-    border: 1px solid #000000;
-    border-radius: 8px;
+    border: 1px solid #000000; 
+    border-radius: 8px; 
+    background-color: rgb(255, 255, 255);   
+       
+}
+.content{
+    border: 0px;
+    /* border-radius: 8px;  */
     background-color: rgb(255, 255, 255); 
-
-    
-    
+    width: 133px;
+    height: 33px; 
 }
 
+.content:hover{
+  background-color:  #FDD68A;
+  
+}
+.content:focus{
+    border-left: 4px solid #FCC55B;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
