--- a/frontend/src/pages/dropdown.module.css
+++ b/frontend/src/pages/dropdown.module.css
@@ -82,6 +82,7 @@
     display:block;
 
 }
+
 .menu   {
 display: none;
 }
@@ -104,9 +105,19 @@ display: none;
 
     border: 1px solid #000000; 
     border-radius: 8px; 
-    background-color: rgb(255, 255, 255);   
-       
+    background-color: transparent;   
+    background-image: url('../assets/Vector2.svg');
+    background-repeat: no-repeat;
+    background-position: right 8px top 40%;
 }
+
+.drop:hover{
+    border:2px solid #000000;
+    background-image: url('../assets/Vector2B.svg');
+    background-repeat: no-repeat;
+    background-position: right 8px top 40%;
+}
+
 .content{
     border: 0px;
     /* border-radius: 8px;  */
@@ -119,7 +130,10 @@ display: none;
   background-color:  #FDD68A;
   
 }
+
 .content:focus{
     border-left: 4px solid #FCC55B;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+
