--- a/frontend/src/pages/resources.module.css
+++ b/frontend/src/pages/resources.module.css
@@ -1,12 +1,17 @@
 .container{
-    width: 750px;
-    height: 196px;
-
+    width: 1776px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
 }
 #header {
     font-weight: 500;
     font-size: 64px;
     line-height: 75px;
+
+    
 }
 
 /* subtitle */
@@ -14,7 +19,8 @@
     font-weight: 300;
     font-size: 24px;
     line-height: 36px;
-    
+    width: 750px;
+   
 }
 
 #bold   {
@@ -27,3 +33,46 @@
     font-size: 24px;
     line-height: 36px;
 }
+
+img{
+    width: 90px;
+    height: 90px;
+}
+
+.flex_container{
+    width: 100%;
+    /* align-items: center;
+    display: flex;
+    justify-content: center; */
+    width: 1279px;
+    
+}
+
+
+
+table {
+    position: relative;
+    top: 50px;
+    width: 100%;
+    /* width: 1779px; */
+    /* height: 800px;  */
+    
+   
+}
+
+td a{
+    font-size: 48px ;
+    font-weight: 500;
+    line-height: 56px;
+    color: #292620;
+
+}
+td{
+    border-style : hidden!important;
+    background-color: transparent;
+}
+
+td{
+    background-color: white;
+}
+
