--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -97,6 +97,11 @@ text {
 
   font-style: normal;
 }
+
+.navbar__logo img {
+  height: 24px;
+}
+
 .footer{
   background-image: url('../assets/tips_background/Vector_1.svg');
   width: 1441px;
