--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -102,6 +102,17 @@ text {
   height: 24px;
 }
 
+.navbar a:hover{
+  color:black;
+  font-weight: 600;
+}
+
+.navbar a:active{
+  color:black;
+  font-weight: 700;
+}
+
+
 .footer{
   background-image: url('../assets/tips_background/Vector_1.svg');
   width: 1441px;
