--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -112,6 +112,10 @@ text {
   font-weight: 700;
 }
 
+.navbar .button {
+  font-weight: 700;
+}
+
 
 .footer{
   background-image: url('../assets/tips_background/Vector_1.svg');
