--- a/frontend/src/pages/resources.module.css
+++ b/frontend/src/pages/resources.module.css
@@ -1,16 +1,18 @@
 .container{
+    padding-left: 214px;
     width: 1776px;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
+    gap: 24px;
+    padding-top: 84px;
     
 }
 #header {
     font-weight: 500;
     font-size: 64px;
     line-height: 75px;
-
     
 }
 
