--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -5,6 +5,8 @@
  */
 
 /* You can override the default Infima variables here. */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+
 :root {
   /* colors */
   --ifm-color-primary: #fcc55b;
@@ -25,6 +27,11 @@
   --ifm-link-color-lighter: #77deea;
   --ifm-link-color-lightest: #acf1f9;
 
+  /*fonts*/
+  --ifm-font-family-base: 'Roboto',sans-serif;
+
+
+
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
@@ -34,6 +41,8 @@ body {
   font-size: 16px;
   line-height: 24px;
   font-weight: normal;
+  font-family: var(--ifm-font-family-base)
+
 }
 
 body.em {
