--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -1,12 +1,15 @@
 .navbar {
   align-items: center;
+  padding: 4rem 2rem 4rem 2rem;
 }
 
 .navbar__logo img {
   max-width: 40%;
   height: auto;
-  padding-left: 20px;
-  padding-top: 4px;
+}
+
+.navbar__link {
+  font-size: 2rem;
 }
 
 .navbar a:hover {
@@ -21,4 +24,8 @@
 
 .navbar .button {
   font-weight: 700;
+  font-size: 1.6rem;
+  padding: 1rem 1.8rem 1rem 1.8rem;
+  border-radius: 8px;
+  margin-left: 1.8rem;
 }
