--- a/frontend/src/css/card.css
+++ b/frontend/src/css/card.css
@@ -1,11 +1,9 @@
-/* .cards-container {
+.cards-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   padding-top: 20px;
   padding-bottom: 20px;
-} */
+}
 
 .card {
   width: 50%;
