--- a/frontend/src/css/tips.css
+++ b/frontend/src/css/tips.css
@@ -10,18 +10,20 @@ body.tips-background {
 .tips-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
   padding-top: 20px;
   padding-bottom: 20px;
+  flex-wrap: nowrap;
+  padding-left: 25%;
+}
+
+.tips-header {
+  font-size: 6.4rem;
+  font-weight: 700;
+  padding: 5.6rem 0 5.6rem 0;
 }
 
 .tips-footer {
   position: absolute;
   bottom: 0;
-}
-
-.tips-header {
-  font-weight: 700;
-  color: #292620;
 }
