--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -1,4 +1,11 @@
 .footer {
   background-color: transparent;
   position: sticky;
+  margin-top: 3rem;
+  max-width: 80%;
+  align-items: center;
+}
+
+.footer__title {
+  font-size: 1.6rem;
 }
