--- a/frontend/src/css/resources.css
+++ b/frontend/src/css/resources.css
@@ -1,69 +1,55 @@
+.resources-wrapper {
+  background: url('../../static/img/backgrounds/resources-background.svg') no-repeat center center fixed;
+  /* -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover; */
+  background-size: cover;
+  position: relative;
+}
+
 .resources-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  align-items: center;
-  gap: 24px;
-  padding-top: 84px;
+  align-items: flex-start;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  flex-wrap: nowrap;
+  padding-left: 12%;
+  max-width: 80%;
 }
 
-#header {
-  font-weight: 500;
-  font-size: 64px;
-  line-height: 75px;
-}
-
-/* subtitle */
-.subtitle {
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 36px;
-  width: 750px;
-}
-
-
-#bold {
-  font-weight: 500;
-}
-#sentence {
-  position: relative;
-  top: 25px;
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 36px;
-}
-
-.flex_container {
-  width: 100%;
-  /* align-items: center;
-    display: flex;
-    justify-content: center; */
-  width: 1279px;
+td,
+th,
+tr,
+table {
+  border: 0 !important;
+  border-spacing: 0 !important;
+  margin-bottom: 20rem;
 }
 
 table {
   position: relative;
   top: 50px;
   width: 100%;
-  /* width: 1779px; */
-  /* height: 800px;  */
 }
 
 td a {
   font-size: 48px;
   font-weight: 500;
   line-height: 56px;
-  color: #292620;
-}
-td {
-  border-style: hidden !important;
-  background-color: transparent;
+  color: black;
 }
 
-td {
+table td {
+  margin-bottom: 5rem;
   background-color: white;
 }
-.footer {
-  display: inline-block;
-  margin-top: 10%;
- }
+
+td img {
+  padding-right: 2rem;
+}
+
+table th,
+table td {
+  padding-left: 0;
+}
