--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -5,6 +5,7 @@
  */
 
 @import 'card.css';
+@import 'icard.css';
 @import 'dropdown.css';
 @import 'footer.css';
 @import 'index.css';
@@ -64,9 +65,9 @@ body.em {
 h1,
 .h1 {
   font-weight: 500;
-  font-size: 48px;
-  font-size: 4.8rem;
-  line-height: 56px;
+  font-size: 64px;
+  /* font-size: 4.8rem; */
+  line-height: 75px;
 }
 
 h2,
