--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -48,7 +48,13 @@ html {
   font-size: 62.5%;
 }
 
+html,
 body {
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
   font-weight: 400;
   font-size: 16px;
   font-size: 1.6rem;
@@ -83,6 +89,10 @@ h2,
 text {
   font-weight: 300;
   font-size: 24px;
+}
+
+td {
+  background-color: transparent;
 }
 
 .subtitle {
