Add wrap to filters

--- a/frontend/src/css/dropdown.css
+++ b/frontend/src/css/dropdown.css
@@ -1,5 +1,6 @@
 .dropdown-container {
   display: inline-flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 50%;
   position: relative;
