index first iteration

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -104,3 +104,5 @@ text {
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+a:hover { text-decoration: none; }
