--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -16,44 +16,31 @@
   }
 }
 
-
 .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.h1{
+.h1 {
   position: absolute;
   left: 40px;
   top: 184px;
-}
-
-.index {
-  position: absolute;
-  left: 72px;
-  top: 283px;
-  font-weight: 300;
-  font-size: 28px;
-  line-height: 36px;
-  max-width: 35%;
 }
 
 form {
   position: absolute;
   left: 72px;
   top: 400px;
-  
 }
 input {
   /* row-gap: 20px; */
   padding: 10px 8px;
   width: 287px;
   height: 40px;
-  background-color: #F0F0EF;
+  background-color: #f0f0ef;
   border-radius: 10px;
   border: none;
-  
 }
 button {
   width: 178px;
