Fix resources page styles

--- a/frontend/src/css/resources.css
+++ b/frontend/src/css/resources.css
@@ -1,9 +1,6 @@
-body.resources-background {
-  background: url('../../static/img/backgrounds/resources-background.svg') no-repeat bottom right fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+.resources-footer {
+  bottom: 0;
+  width: 100vw;
 }
 
 .resources-container {
