--- a/frontend/src/css/icard.css
+++ b/frontend/src/css/icard.css
@@ -1,35 +1,52 @@
+.icards-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding-left: 20%;
+}
+
 .icard {
-    width: 75%;
-    height: 393px;
-    background-color: #FFFFFF;
-    border-top: 8px solid #1E660C;
-    box-shadow: 0px 4px 10px 2px rgba(113, 74, 0, 0.25);
-    border-radius: 15px;
-    margin-right: 20px;
-    padding: 20px;
+  margin: 2rem;
+  background-color: #ffffff;
+  border-top: 8px solid var(--secondary-text);
+  box-shadow: 0px 4px 10px 2px rgba(113, 74, 0, 0.25);
+  border-radius: 15px;
+  margin-right: 20px;
+  padding: 20px;
+  height: 500px;
+  width: 400px;
+}
+
+@media screen and (max-width: 996px) {
+  .icards-container {
+    flex-direction: column;
   }
 
-.icard p{
-    font-weight: 300;
+  .icard {
+    width: 85%;
+    height: auto;
+  }
 }
 
-.tip-cards{
-    display: flex;
-    flex-direction: row;
-    padding-left: 417px;
-    padding-top: 575px;
+.icard p {
+  font-weight: 300;
+  color: var(--dark);
 }
 
-.icard a{
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 23px;
-
-    color: #4D3C1B;
-
+.tip-icards {
+  display: flex;
+  flex-direction: row;
+  padding-left: 417px;
+  padding-top: 575px;
 }
 
-.icard a:hover{
-    
+.icard a {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  cursor: pointer;
+  color: var(--primary-text);
+}
 
+.icard a:hover {
 }
