--- a/frontend/src/css/resources.css
+++ b/frontend/src/css/resources.css
@@ -14,37 +14,12 @@
   max-width: 80%;
 }
 
-td,
-th,
-tr,
-table {
-  border: 0 !important;
-  border-spacing: 0 !important;
-  margin-bottom: 20rem;
-}
-
-table {
-  position: relative;
-  top: 50px;
-  width: 100%;
-}
-
-td a {
-  font-size: 48px;
-  font-weight: 500;
-  line-height: 56px;
+.resources-container a:hover {
+  text-decoration: underline;
+  cursor: pointer;
   color: black;
 }
 
-table td {
-  margin-bottom: 5rem;
-}
-
-td img {
-  padding-right: 2rem;
-}
-
-table th,
-table td {
-  padding-left: 0;
+.resources-container table td {
+  background-color: white;
 }
