--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -6,6 +6,7 @@
 
 @import 'card.css';
 @import 'community.css';
+@import 'drip.css';
 @import 'icard.css';
 @import 'dropdown.css';
 @import 'footer.css';
