--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -14,6 +14,7 @@
 @import 'index.css';
 @import 'navbar.css';
 @import 'resources.css';
+@import 'thanks.css';
 @import 'tips.css';
 
 /* You can override the default Infima variables here. */
