--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -1,12 +1,3 @@
-/* .home-body {
-  position: relative;
-}
-
-.footer .home-body {
-  background-color: blue;
-  z-index: 999;
-} */
-
 .home-wrapper {
   display: flex;
   flex-direction: column;
@@ -26,15 +17,30 @@
   cursor: pointer;
 }
 
-.home-form {
-  position: inherit;
-}
-
-.home-form {
-  position: inherit;
-}
-
 .home-footer {
   bottom: 0;
   width: 100vw;
+}
+
+.home-wrapper input[type='email'] {
+  padding: 10px 8px;
+  width: 287px;
+  height: 40px;
+  background-color: #f0f0ef;
+  border-radius: 10px;
+  border: none;
+}
+
+.home-wrapper input {
+  margin: 2rem 2rem 2rem 0;
+}
+
+.home-button {
+  width: 178px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 700;
+  background-color: var(--ifm-color-secondary);
+  border-radius: 8px;
+  border: none;
 }
