--- a/frontend/src/css/icard.css
+++ b/frontend/src/css/icard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  padding-left: 20%;
+  justify-content: center;
 }
 
 .icard {
