--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -11,6 +11,8 @@
   border-radius: 10px;
   padding: 3.5rem;
   margin-top: 20rem;
+  margin-bottom: 30rem;
+  z-index: 1;
 }
 
 @media screen and (max-width: 996px) {
@@ -22,6 +24,7 @@
     border-radius: 10px;
     padding: 3.5rem;
     margin-top: 10rem;
+    margin-bottom: 2rem;
   }
 }
 
@@ -40,6 +43,7 @@
 }
 
 .signup-footer {
+  position: absolute;
   bottom: 0;
   width: 100vw;
 }
