--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -4,6 +4,7 @@
   align-items: flex-start;
   padding: 2rem 2rem 4rem 2rem;
   flex-wrap: nowrap;
+  z-index: 1;
 }
 
 .home-header {
@@ -18,6 +19,7 @@
 }
 
 .home-footer {
+  position: absolute;
   bottom: 0;
   width: 100vw;
 }
